Don't use ExoPlayer, use regular Android Video

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     },
     "rnpm": {
         "android": {
-            "sourceDir": "./android-exoplayer"
+            "sourceDir": "./android"
         }
     },
     "files": [
